attempt to fix margins on mobile

--- a/css/custom.css
+++ b/css/custom.css
@@ -68,3 +68,7 @@ h1 {
 .features {
 	margin-top: 100px;
 }
+
+.pad-left {
+	padding-left: 20px;
+}
